--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -11,7 +11,8 @@
     <application android:requestLegacyExternalStorage="true">
         <activity android:name="com.starseed.speechtotext.MainActivity"
                   android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+			      android:screenOrientation="landscape">
           <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
